--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <img src="phone.png" />
         </section>
     
-
+          <!--JavaScript-->
         <script>
             var btnAbrir = document.querySelector('.btn-menu');
             var btnClose = document.querySelector('.btn-close');
